--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500&display=swap');
 
 /* Reset some default styles */
+*{
+    box-sizing: border-box;    
+    font-family: 'Sora', sans-serif;
+}
+
 body, h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
+    background-color: #FAFAF9;
 }
 
 a {
@@ -16,3 +22,65 @@ a {
 }
 
 /* General styles */
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    padding: 164px;
+}
+
+.card {
+    max-width: 368px;
+    padding: 16px;
+    -webkit-box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.1);
+    -moz-box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.1);
+    box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    color: #20293A;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card-image {
+    width: 100%;
+    height: 152px;
+    border-radius: 10px;
+}
+
+.card-tag {
+    color: #883AE1;
+    background-color: #E6D6FC;
+    padding: 6px 1rem;
+    border-radius: 15px;
+    width: fit-content;
+    font-size: .625rem;
+    font-weight: 500;
+}
+
+.card-body {
+    font-size: .875rem;
+    font-family: serif;
+    font-weight: 400;
+    margin-bottom: 4px;
+}
+
+.card-title {
+    margin-bottom: 6px;
+    font-size: 1.125rem;
+}
+
+.card-separator {
+    margin: 20px -1rem;
+    /* border-color: ; */
+    border-top-color: #6C727F1f;
+}
+
+.card-author {
+    font-size: .75rem;
+    font-weight: 400;
+}
+
+.card-paraph, .card-author, .card-separator {
+    color: #6C727F;
+}
