--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ a {
     -moz-box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.1);
     box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.1);
     border-radius: 15px;
+    background-color: #fff;
     color: #20293A;
     display: flex;
     flex-direction: column;
